# Axiom

./: .gitignore  CMakeLists.txt  README.md  test.ax
examples/: fibonacci.ax  hello_world.ax  linear_regression.ax
src/: main.cpp
src/codegen/: codegen.cpp  codegen.hpp
src/driver/: driver.cpp  driver.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/parser/: ast.hpp  parser.cpp  parser.hpp
src/repl/: repl.cpp  repl.hpp
src/semantic/: symbol_table.cpp  symbol_table.hpp  type_checker.cpp  type_checker.hpp  types.cpp  types.hpp
src/stdlib/: core.hpp  io.hpp  math.hpp  stdlib.hpp
tests/: codegen_test.cpp  lexer_test.cpp  parser_test.cpp  semantic_test.cpp  stdlib_test.cpp
